<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.noteapp.ViewFolderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noteBoard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortGroup" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="add note"
        android:src="@drawable/add_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/sortGroup"
        android:layout_width="391dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/noteBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RadioButton
            android:id="@+id/sort_az"
            android:layout_width="87dp"
            android:layout_height="31dp"
            android:buttonTint="@color/black"
            android:onClick="onRadioButtonClicked"
            android:saveEnabled="true"
            android:text="A to Z"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/sort_za"
            android:layout_width="84dp"
            android:layout_height="31dp"
            android:buttonTint="@color/black"
            android:onClick="onRadioButtonClicked"
            android:text="Z to A"
            android:textColor="@color/black" />
        <RadioButton
            android:id="@+id/sort_date"
            android:layout_width="84dp"
            android:layout_height="31dp"
            android:buttonTint="@color/black"
            android:onClick="onRadioButtonClicked"
            android:text="latest"
            android:checked="true"
            android:textColor="@color/black" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
