...
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_icon"
        android:title="Settings" />
    <item
        android:id="@+id/deleteNote"
        android:icon="@drawable/delete_icon"
        android:title="Delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/editNote"
        android:icon="@drawable/edit_icon"
        android:title="Edit"
        app:showAsAction="ifRoom" />

</menu>
